--- a/DAC-001_Intro_To_Python/DAC_001_Intro_to_Python_Blank_Session_1.ipynb
+++ b/DAC-001_Intro_To_Python/DAC_001_Intro_to_Python_Blank_Session_1.ipynb
@@ -374,17 +374,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 41,
       "metadata": {
         "id": "cVENYK1E0YPx"
       },
       "outputs": [
         {
-          "ename": "IndentationError",
-          "evalue": "unexpected indent (4281165745.py, line 10)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;36m  Cell \u001b[1;32mIn[38], line 10\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\"full name:\" {0}{1}.format(name,lastname))\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "dexun\n",
+            "Full name:dexun tan\n",
+            "full name: dexuntan\n"
           ]
         }
       ],
@@ -398,7 +399,7 @@
         "print(\"Full name:\" + name + \" \" + last_name)\n",
         "# Alternative Method for String Formatting\n",
         "  # The numbers {0} and {1} correspond to the respective order of the variables: Jun = 0, Yo = 1.\n",
-        "  print(\"full name:\" {0}{1}.format(name,lastname))"
+        "print(\"full name: {0}{1}\".format(name,last_name))"
       ]
     },
     {
@@ -451,23 +452,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 47,
       "metadata": {
         "id": "g8SngCyXoqGt"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[]\n",
+            "[]\n",
+            "['string', 9, 0.21, True]\n"
+          ]
+        }
+      ],
       "source": [
         " # Empty list\n",
+        "empty_list = []\n",
+        "print(empty_list)\n",
+        "list1 = []\n",
+        "print(list1)\n",
         "\n",
+        " # List with different data types\n",
         "\n",
-        "\n",
-        "\n",
-        " # List with different data types\n"
+        "different_data_type_list = [\"string\",9,0.21,True]\n",
+        "print(different_data_type_list)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -478,22 +493,29 @@
       },
       "outputs": [
         {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 'AHH', 1, 'AHH', 1, 'AHH']\n",
+            "['string', 9, 0.21, True, 'ahh']\n"
+          ]
+        },
+        {
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
               "'\\nNote on the append() method:\\n\\nThe append() method adds the element to the end of the list each time it is executed.\\nCalling append() multiple times (i.e., running this code again) will continue to add the elements to the existing list, rather than starting over.\\n(So, the same element will be added twice if you run the code twice, three times if you run it three times, and so on.)\\nTo reset the list, you can reinitialize it (rerun the code from the beginning).\\n'"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 50,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Adding elements to a list using the above variables\n",
-        "\n",
+        "list1.append(1)\n",
+        "list1.append(\"AHH\")\n",
+        "print(list1)\n",
         "  # Adding an integer to the list\n",
         "  # Adding a string to the list\n",
         "  # Output: [1, \"AHH\"]\n",
@@ -501,6 +523,8 @@
         "  # Adding a string to the mixed list\n",
         "  # Output: [True, 'Slay', 173, 3.14, 'AHH']\n",
         "\n",
+        "different_data_type_list.append(\"ahh\")\n",
+        "print(different_data_type_list)\n",
         "\"\"\"\n",
         "Note on the append() method:\n",
         "\n",
@@ -513,29 +537,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 75,
       "metadata": {
         "id": "EhMqwM-w0YPy"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[50, 50, 1, 'AHH', 1, 'AHH', 1, 'AHH']\n"
+          ]
+        }
+      ],
       "source": [
         "# Inserting elements into a list at a specific position\n",
         "# Syntax: list_.insert(position, item)\n",
-        "\n",
+        "list1.insert(0,50)\n",
+        "print(list1)\n",
         "  # Insert the number 50 at the 0th index (1st number is the position, 2nd is the element to add)\n",
         "  # Output will show 50 at the start of the list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 76,
       "metadata": {
         "id": "NYr5u52Rwy6h"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "cannot delete function call (929421140.py, line 2)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;36m  Cell \u001b[1;32mIn[76], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    del list1(0)\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot delete function call\n"
+          ]
+        }
+      ],
       "source": [
         "# Deleting elements from a list\n",
-        "\n",
+        "del list1(0)\n",
+        "print(list1)\n",
         "# Using `del` to delete by index\n",
         "  # Deletes the element at index 0 (1st element in the list)\n",
         "  # Output: List with the 1st element removed"
@@ -543,14 +586,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 58,
       "metadata": {
         "id": "Q05F_xXdFdpx"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[50, 1, 'AHH', 1, 'AHH', 1, 'AHH']\n"
+          ]
+        }
+      ],
       "source": [
         "# Alternative Method for Deleting elements from a list\n",
-        "\n",
+        "list1.\n",
+        "print(list1)\n",
         "# Using `remove()` to delete by value\n",
         "  # Removes the first occurrence of the value 50 from the list\n",
         "  # Output: List without the first 50"
@@ -558,100 +610,172 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 74,
       "metadata": {
         "id": "Qxd8-H6oG0a0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ]
+        }
+      ],
       "source": [
         "# List Indexing\n",
-        "\n",
+        "list4 = [3,1,4,1,5]\n",
+        "index_list4 = list4.index(3)\n",
+        "print(index_list4)\n",
         "  # Finds the index position of the element '3' in the list\n",
         "  # Output: 0 (since '3' is at the 0th index)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 63,
       "metadata": {
         "id": "JTsF0nfmSINs"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "1\n",
+            "Maximum value: 5\n",
+            "Minimum value: 1\n"
+          ]
+        }
+      ],
       "source": [
         "# Finding minimum and maximum values in a list\n",
         "  # Use the min() function to find the smallest element in list4\n",
         "  # Use the max() function to find the largest element in list4\n",
         "\n",
-        "\n",
-        "\n",
+        "min_list4 = min(list4)\n",
+        "max_list4 = max(list4)\n",
+        "print(max_list4)\n",
+        "print(min_list4)\n",
         "# With labels\n",
-        "  # Output the minimum value\n",
-        "  # Output the maximum value"
+        "print(\"Maximum value:\", max_list4) # Output the minimum value\n",
+        "print(\"Minimum value:\", min_list4) # Output the maximum value"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 73,
       "metadata": {
         "id": "vc5SVEzvBK33"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 9]\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
-        "\n",
+        "listNum = [4,2,1,3,6,5,9]\n",
+        "sorted_listNumlist = sorted(listNum)\n",
+        "print(sorted_listNumlist)\n",
         " # Use the sorted() function to sort the list\n",
         " # Output the sorted list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 68,
       "metadata": {
         "id": "dI6AzeKIBrvB"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[9, 6, 5, 4, 3, 2, 1]\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
+        "listNum2 = [1,2,3,4,5,6,9]\n",
+        "listNum2.reverse()\n",
+        "print(listNum2)\n",
         " # Reverse listNum2\n",
         " # Otput the reversed list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 69,
       "metadata": {
         "id": "zlonSikNCFQj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[]\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
+        "listNum2 = [1,2,3,4,5,6,9]\n",
+        "listNum2.clear()\n",
+        "print(listNum2)\n",
         " # Clear all elements from the list\n",
         " # Print the cleared list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 70,
       "metadata": {
         "id": "ZLm22sE7CJ_t"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['M', 'A', 'Y', 'A', 123]\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
-        "\n",
+        "list5 = [\"M\", \"A\",\"Y\"]\n",
+        "list6 = [\"A\",123]\n",
+        "listAdded = list5 + list6\n",
+        "print(listAdded)\n",
         " # Add the two lists together\n",
         " # Output the added list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 71,
       "metadata": {
         "id": "u3FYS3JZCgkc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Kaavya', 'M', 'Kaavya', 'M']\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
+        "listNames = [\"Kaavya\",\"M\"]\n",
+        "listmultiplied = listNames * 2\n",
+        "print(listmultiplied)\n",
         " # Multiply the list by 2\n",
         " # Output the multiplied list"
       ]
@@ -669,63 +793,125 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 77,
       "metadata": {
         "id": "kwrmo-XJ0YPy"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tuple"
+            ]
+          },
+          "execution_count": 77,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "\n",
+        "dance = (\"jazz\", \"tap\")\n",
+        "type(dance)\n",
         " # Check the type of the 'parents' variable"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 78,
       "metadata": {
         "id": "K_PTgd_aEKEI"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['jazz', 'tap']\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "execution_count": 78,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "\n",
+        "tuplelist = list(dance)\n",
+        "print(tuplelist)\n",
+        "type(tuplelist)\n",
         " # Output the list\n",
         " # Check the type of 'tuplelist'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 80,
       "metadata": {
         "id": "MLliO46RElXM"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['jazz', 'tap', 'Ballet', 'Ballet']\n"
+          ]
+        }
+      ],
       "source": [
+        "tuplelist.append(\"Ballet\")\n",
+        "print(tuplelist)\n",
         " # Add new line to the list 'tuplelist'\n",
         " # Output the updated list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 82,
       "metadata": {
         "id": "32Wg2x89GuXA"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "('jazz', 'tap', 'Ballet', 'Ballet')\n"
+          ]
+        }
+      ],
       "source": [
         " # Convert the list 'tuplelist' back to a tuple\n",
-        " # Check the value of the new tuple"
+        " # Check the value of the new tuple\n",
+        "new_tuple = tuple(tuplelist)\n",
+        "print(new_tuple)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 83,
       "metadata": {
         "id": "SS3bxGkbG-vl"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "4\n"
+          ]
+        }
+      ],
       "source": [
         " # Get the length of the list 'tuplelist'\n",
-        " # Output of the length"
+        " # Output of the length\n",
+        "length_of_tuplelist = len(tuplelist)\n",
+        "print(length_of_tuplelist)"
       ]
     },
     {
@@ -744,101 +930,129 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 84,
       "metadata": {
         "id": "B5vdCq3P0YPy"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'cat', 'wolf', 'dog'}\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
-        " # Output of the set"
+        " # Output of the set\n",
+        "x = {\"dog\" , \"cat\", \"wolf\"}\n",
+        "print(x)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 86,
       "metadata": {
         "id": "VgrBbY_1HrNx"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'cat', 'fish', 'wolf', 'dog'}\n"
+          ]
+        }
+      ],
       "source": [
         " # Add an element to the set\n",
-        " # Output of the updated set"
+        " # Output of the updated set\n",
+        "x.add(\"fish\")\n",
+        "print(x)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 87,
       "metadata": {
         "id": "MbMyt-oQH80_"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'fish', 'wolf', 'dog'}\n"
+          ]
+        }
+      ],
       "source": [
         " # Remove an element from the set\n",
-        " # Output of the updated set"
+        " # Output of the updated set\n",
+        "x.remove(\"cat\")\n",
+        "print(x)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 88,
       "metadata": {
         "id": "Z6V43JC2IaLt"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{2, (1, 2, 3), 4.3, 'hello'}\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
-        " # Output of the set"
+        " # Output of the set\n",
+        "z = {(1,2,3),\"hello\",2,4.3}\n",
+        "print(z)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 90,
       "metadata": {
         "id": "sdYsD2okI5cZ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 7, 4]\n",
+            "{1, 2, 3, 4, 5, 7}\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "set"
+            ]
+          },
+          "execution_count": 90,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "\n",
+        "r = [1,2,3,4,5,7,4]\n",
+        "print(r)\n",
         " # Output of the original list\n",
-        "\n",
+        "r_set = set(r)\n",
+        "print(r_set)\n",
         " # Convert the list to a set (to remove duplicates)\n",
         " # Output of the converted set\n",
-        "\n",
+        "type(r_set)\n",
         " # Check the data type of r_set\n",
         " # Output of the converted set"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fEkjRhbC0YPy"
-      },
-      "source": [
-        "## Working with Dictionaries"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 35,
-      "metadata": {
-        "id": "YJCVMWae0YPy"
-      },
-      "outputs": [],
-      "source": [
-        "# Creating a dictionary to store information about a person\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "  # Outputs the entire dictionary\n",
-        "\n",
-        "# Accessing a specific value using the key\n",
-        "\n",
-        "\n",
-        "# Using the get() method to retrieve a value safely\n",
-        "\n"
       ]
     }
   ],
