--- a/DAC-001_Intro_To_Python/DAC-001-My-Intro-to-Python-Tutorial-Questions.ipynb
+++ b/DAC-001_Intro_To_Python/DAC-001-My-Intro-to-Python-Tutorial-Questions.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -229,21 +229,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "[10, 9, 8, 7, 6, 3]\n"
      ]
     }
    ],
    "source": [
-    "sorted(students_id)\n",
-    "sorted_students_id = students_id.reverse()\n",
-    "print(sorted_students_id)\n"
+    "students_id = [10,6,7,8,9,3]\n",
+    "sorted_students_id = sorted(students_id)\n",
+    "sorted_students_id.reverse()\n",
+    "print(sorted_students_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(c) Remove all elements from the sorted_students_id list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sorted_students_id.clear()\n",
+    "print(sorted_students_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 4: Generating Lists\n",
+    "\n",
+    "Task:\n",
+    "\n",
+    "Generate a list of numbers starting from 15 and decreasing by 3 each step, until the number is positive (not inclusive of zero). Store it in a variable named desc_list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 12, 9, 6, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "desc_list = list(range(15, 0, -3))\n",
+    "print(desc_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 5: Generating Lists\n",
+    "\n",
+    "Task:\n",
+    "\n",
+    "Generate a list of numbers starting from 2, increasing by 2 each step, until the list contains 14 elements. Store it in a variable named asc_list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28]\n"
+     ]
+    }
+   ],
+   "source": [
+    "asc_list = [2 * i for i in range(1, 15)]\n",
+    "print(asc_list)\n"
    ]
   },
   {
@@ -270,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
