--- a/DAC-001_Intro_To_Python/DAC-001-My-Intro-to-Python-Tutorial-Questions.ipynb
+++ b/DAC-001_Intro_To_Python/DAC-001-My-Intro-to-Python-Tutorial-Questions.ipynb
@@ -331,6 +331,212 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 6: Combining and Separating Lists\n",
+    "\n",
+    "Task:\n",
+    "\n",
+    "Combine the lists generated in Questions 4 and 5 into a single list named combined_list.\n",
+    "Separate the even and odd numbers from combined_list into two separate lists: even_numbers and odd_numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 6, 8, 10, 12, 12, 14, 16, 18, 20, 22, 24, 26, 28]\n",
+      "[3, 9, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "combined_list = asc_list + desc_list\n",
+    "even_number = [item for item in combined_list if item % 2 == 0]\n",
+    "odd_number = [item for item in combined_list if item % 2 != 0]\n",
+    "print(sorted(even_number))\n",
+    "print(sorted(odd_number))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 7: Functions\n",
+    "\n",
+    "Task:\n",
+    "\n",
+    "Create a function circle_properties(radius) that takes in the radius of a circle and returns both the area and circumference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50.24, 25.12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def circle_properties(radius):\n",
+    "    area = 3.14 * radius**2\n",
+    "    circumference = 3.14 * 2 * radius\n",
+    "    return area , circumference\n",
+    "\n",
+    "area_circumference = circle_properties(4)\n",
+    "print(area_circumference)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 8: Custom Function\n",
+    "\n",
+    "Task:\n",
+    "\n",
+    "Define a function that performs a task you find interesting. Demonstrate how this function works."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 9: Creating and Manipulating Dictionaries\n",
+    "\n",
+    "Task:\n",
+    "\n",
+    "(a) Create a dictionary named student_grades with the following keys and values: \"Alice\": 85, \"Bob\": 90, and \"Charlie\": 78."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alice': 85, 'Bob': 90, 'Charlie': 78}\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_grades = {\n",
+    "    \"Alice\": 85 ,\n",
+    "    \"Bob\" : 90 ,\n",
+    "    \"Charlie\": 78\n",
+    "}\n",
+    "\n",
+    "print(student_grades)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(b) Add a new student, \"David\", with a grade of 92 to the student_grades dictionary.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alice': 85, 'Bob': 90, 'Charlie': 78, 'David': 92}\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_grades[\"David\"] = 92\n",
+    "print(student_grades)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(c) Update \"Alice\"'s grade to 88"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alice': 88, 'Bob': 90, 'Charlie': 78, 'David': 92}\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_grades[\"Alice\"] = 88\n",
+    "print(student_grades)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 10: Using Dictionaries to Count Occurrences\n",
+    "\n",
+    "Task:\n",
+    "\n",
+    "Given the list of fruits [\"apple\", \"banana\", \"apple\", \"orange\", \"banana\", \"apple\"], create a dictionary named fruit_count that counts the number of times each fruit appears in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple': 3, 'banana': 2, 'orange': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"apple\", \"orange\", \"banana\", \"apple\"]\n",
+    "fruit_count = {\n",
+    "    \"apple\" : 3 , \n",
+    "    \"banana\" : 2 , \n",
+    "    \"orange\" : 1 \n",
+    "}\n",
+    "print(fruit_count)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
