--- a/DAC-001_Intro_To_Python/DAC-001-My-Intro-to-Python-Tutorial-Questions.ipynb
+++ b/DAC-001_Intro_To_Python/DAC-001-My-Intro-to-Python-Tutorial-Questions.ipynb
@@ -411,11 +411,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: Should i eat chicken rice tmr?\n",
+      "Magic 8-Ball says: Without a doubt\n"
+     ]
+    }
+   ],
    "source": [
-    "def "
+    "import random  \n",
+    "\n",
+    "def magic_8_ball():\n",
+    "    responses = [\n",
+    "        \"Yes\", \"No\", \"It is certain\", \"Without a doubt\",\n",
+    "        \"Reply hazy, try again\", \"Don't count on it\",\n",
+    "        \"My sources say no\", \"Outlook not so good\", \"Very doubtful\",\n",
+    "        \"You may rely on it\"\n",
+    "    ]\n",
+    "    return random.choice(responses)\n",
+    "\n",
+    "question = \"Should i eat chicken rice tmr?\"  \n",
+    "answer = magic_8_ball()  \n",
+    "print(f\"Question: {question}\")  \n",
+    "print(f\"Magic 8-Ball says: {answer}\")  \n"
    ]
   },
   {
