--- a/DAC-007_Web_Scraping/DAC-007_Web_Scraping_Student.ipynb
+++ b/DAC-007_Web_Scraping/DAC-007_Web_Scraping_Student.ipynb
@@ -79,7 +79,13 @@
    },
    "outputs": [],
    "source": [
-    "# Import libraries\n"
+    "#Import libraries\n",
+    "import pandas as pd\n",
+    "import urllib\n",
+    "import urllib.request\n",
+    "from bs4 import BeautifulSoup\n",
+    "import requests\n",
+    "from pprint import pprint #pretty print helps for formatting"
    ]
   },
   {
@@ -100,7 +106,8 @@
    "outputs": [],
    "source": [
     "# 1. Scraping HTML\n",
-    "url = \"https://forecast.weather.gov/MapClick.php?lat=37.7772&lon=-122.4168\"\n"
+    "url = \"https://forecast.weather.gov/MapClick.php?lat=37.7772&lon=-122.4168\"\n",
+    "page = requests.get(url)"
    ]
   },
   {
@@ -111,7 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "page\n",
     "#Informational responses (100–199)\n",
     "#Successful responses (200–299)\n",
     "#Redirection messages (300–399)\n",
@@ -128,8 +135,9 @@
    "outputs": [],
    "source": [
     "#2. Make HTML looks more presentable / has indentation\n",
-    "\n",
-    "# print(soup) # Just to compare between using and not using prettify\n"
+    "soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "# print(soup) # Just to compare between using and not using prettify\n",
+    "print(soup.prettify())"
    ]
   },
   {
@@ -141,7 +149,8 @@
    "outputs": [],
    "source": [
     "# 3. How to find information of tags from HTML\n",
-    "#  a) Finding all instances of a tag using find_all\n"
+    "#  a) Finding all instances of a tag using find_all\n",
+    "soup.find_all('p')"
    ]
   },
   {
@@ -153,7 +162,7 @@
    "outputs": [],
    "source": [
     "# get_text() function extract text\n",
-    "\n",
+    "soup.find_all('p')[1].get_text()\n",
     "\n",
     "# Count the statements in between the \"p\"s, notice the index 1 statement"
    ]
@@ -166,7 +175,8 @@
    },
    "outputs": [],
    "source": [
-    "# Get statement from index 2\n"
+    "# Get statement from index 2\n",
+    "soup.find_all('p')[2].get_text()"
    ]
   },
   {
@@ -177,7 +187,8 @@
    },
    "outputs": [],
    "source": [
-    "# 3b) Finding the first instance of tag using find()\n"
+    "# 3b) Finding the first instance of tag using find()\n",
+    "soup.find('p')"
    ]
   },
   {
@@ -188,7 +199,8 @@
    },
    "outputs": [],
    "source": [
-    "# This is a get_text function, all the those with =\"\" are not text\n"
+    "# This is a get_text function, all the those with =\"\" are not text\n",
+    "soup.find_all('p')[0].get_text()"
    ]
   },
   {
@@ -199,7 +211,8 @@
    },
    "outputs": [],
    "source": [
-    "# Split up a string into a list\n"
+    "# Split up a string into a list\n",
+    "soup.find_all('p')[0].get_text().rsplit()"
    ]
   },
   {
@@ -213,7 +226,7 @@
     "#c) Search for tags by class or id\n",
     "\n",
     "# Find tags with class period-name\n",
-    "\n",
+    "soup.find_all(class_= 'period-name')\n",
     "# Reason why the class does not require quotations: it is a CSS selector, hence recognised by the Python language\n",
     "# The reason why we put an underscore after the class is because class is a function inbuilt in the Python system, \n",
     "# therefore underscore '_' tells the system to get the CSS selector instead"
@@ -228,7 +241,7 @@
    "outputs": [],
    "source": [
     "# Find tags with id news-items\n",
-    "\n",
+    "soup.find_all(id = \"news-items\")\n",
     "# Get whatever it is under or nested in the id 'news-items' (Refer to the soup code)\n",
     "# Reason why id is not required a quotation: it is a CSS selector, hence recognised by the Python language"
    ]
@@ -257,7 +270,8 @@
    },
    "outputs": [],
    "source": [
-    "# Show our current soup variable\n"
+    "# Show our current soup variable\n",
+    "print(soup.prettify())"
    ]
   },
   {
@@ -269,7 +283,8 @@
    "outputs": [],
    "source": [
     "# Find the div with id seven-day-forecast and assign to seven-day\n",
-    "\n"
+    "seven_day = soup.find(id = \"seven-day-forecast\")\n",
+    "print(seven_day.prettify())\n"
    ]
   },
   {
@@ -281,7 +296,8 @@
    "outputs": [],
    "source": [
     "# Step 4: Inside the seven day, find each individual forecast item\n",
-    "\n"
+    "forecast_items = seven_day.find_all(class_ = 'tombstone-container')\n",
+    "print(forecast_items)\n"
    ]
   },
   {
@@ -293,7 +309,8 @@
    "outputs": [],
    "source": [
     "# Step 5: Extract and print the first forecast item\n",
-    "\n"
+    "tonight = forecast_items[0]\n",
+    "print(tonight.prettify())\n"
    ]
   },
   {
@@ -307,7 +324,12 @@
     "# Step 6: Using the tag information found from Step 5, extract the following information:\n",
     "# Period, Short Description, Temperature and Description of the condtions\n",
     "\n",
-    "\n",
+    "period = tonight.find(class_ = 'period-name').get_text()\n",
+    "short_desc = tonight.find(class_ = 'short-desc').get_text()\n",
+    "temp = tonight.find(class_ = 'temp').get_text()\n",
+    "print(period)\n",
+    "print(short_desc)\n",
+    "print(temp)\n",
     "\n",
     "\n",
     "\n"
@@ -323,7 +345,9 @@
    "source": [
     "# Description of the conditions\n",
     "\n",
-    "\n"
+    "img = tonight.find('img') # 'img' requires a quotation as it is not a CSS selector; not recognised by the Python\n",
+    "desc = img['title'] # Same reasoning goes to the title; not a CSS selector\n",
+    "print(desc)\n"
    ]
   },
   {
@@ -336,7 +360,10 @@
    "source": [
     "# Extract all period names\n",
     "\n",
-    "\n",
+    "eriod_tags = seven_day.select('.tombstone-container .period-name')\n",
+    "print(period_tags)\n",
+    "periods = [pt.get_text() for pt in period_tags]\n",
+    "periods\n",
     "\n"
    ]
   },
@@ -349,14 +376,15 @@
    "outputs": [],
    "source": [
     "# Create our variables short_descs, temps, descs\n",
-    "\n",
+    "short_descs = [sd.get_text() for sd in seven_day.select('.tombstone-container .short-desc')]\n",
     "# We need put the . for class and id, because they are CSS selectors\n",
-    "\n",
+    "temps = [t.get_text() for t in seven_day.select('.tombstone-container .temp')]\n",
+    "descs = [d['title'] for d in seven_day.select('.tombstone-container img')]\n",
     "# Do not have to put the dots there because img is not under the division of the tombstone-container\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(short_desc)\n",
+    "print(temps)\n",
+    "print(descs)"
    ]
   },
   {
@@ -370,7 +398,15 @@
     "# Step 7: Format the extracted data into a pandas dataset\n",
     "\n",
     "\n",
+    "import pandas as pd\n",
     "\n",
+    "weather = pd.DataFrame({'Period':periods,\n",
+    "                        'Short Descriptions':short_descs,\n",
+    "                        'Temperature':temps,\n",
+    "                        'Descriptions':descs\n",
+    "                        })\n",
+    "\n",
+    "weather\n",
     "\n",
     "\n",
     "\n",
@@ -391,7 +427,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -405,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
